Salesforce LWC/force-app/main/default/objects/System_Event__c/System_Event__c.object-meta.xml
<CustomObject>
    <label>System Event</label>
    <nameField>
        <displayFormat>Event-{000000}</displayFormat>
        <label>EventId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>