Salesforce LWC/force-app/main/default/objects/System_Event__c/fields/Complete_Trace_string__c.field-meta.xml
<CustomField>
    <fullName>Complete_Trace_string__c</fullName>
    <label>Complete Trace string</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>