Salesforce LWC/force-app/main/default/objects/System_Event__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Apex Trigger</fullName>
            </value>
            <value>
                <fullName>Lightning Flow</fullName>
            </value>
            <value>
                <fullName>Platform Event</fullName>
            </value>
            <value>
                <fullName>Batch Apex</fullName>
            </value>
            <value>
                <fullName>Queueable Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>