Salesforce LWC/force-app/main/default/objects/System_Event__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>Line_Number__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Complete_Trace_string__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>